--- a/src/Main.css
+++ b/src/Main.css
@@ -31,10 +31,14 @@
   width: 200px;
   float: left;
   margin-left: 10px;
+  height: 20px;
+  font-size: 16px;
 }
 
 .inputB {
   float: left;
+  height: 27px;
+  font-size: 22px;
   margin-left: 10px;
   background-color: #0078ce;
   border: none;
@@ -42,7 +46,6 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
 }
 
 .videoplayer {
