--- a/src/Sidenav.css
+++ b/src/Sidenav.css
@@ -7,7 +7,6 @@
 }
 
 .table1 {
-  margin-top: 100px;
   width: 100%;
 }
 
@@ -23,5 +22,39 @@
 .td1:hover {
 	color: #0078ce;
   background-color: #262626;
+}
 
+.searchroom {
+  margin-top: 120px;
+}
+
+.plus {
+  color: #0078ce;
+  font-size: 24px;
+  float: left;
+  margin-left: 35px;
+}
+
+.sidescrollbox {
+  width: 100%;
+  height:80%;
+  scrollbar-base-color: gold;
+  font-family:sans-serif;
+  overflow: auto;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 10px;
+  height: 83%;
+  width: 85%;
+}
+
+.addbox {
+  height: 200px;
+  width: 400px;
+}
+
+.inlink {
+  width: 200px;
+  height: 20px;
+  font-size: 16px;
 }
