--- a/src/Sidenav.css
+++ b/src/Sidenav.css
@@ -37,24 +37,26 @@
 
 .sidescrollbox {
   width: 100%;
-  height:80%;
   scrollbar-base-color: gold;
   font-family:sans-serif;
   overflow: auto;
   margin-left: 24px;
   margin-right: 24px;
   margin-top: 10px;
-  height: 83%;
+  height: 82%;
   width: 85%;
 }
 
 .addbox {
   height: 200px;
   width: 400px;
+  position: absolute;
+  background: blue;
+  margin-left: 35px;
 }
 
 .inlink {
-  width: 200px;
+  width: 160px;
   height: 20px;
   font-size: 16px;
 }
