--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,12 @@ body {
   background: #191919;
   width: 100%;
   height: 100px;
+}
 
+.logo5 {
+  height: 10%;
+  margin-left: -10%;
+  margin-top: -3.5%;
 }
 
 .title {
@@ -25,6 +30,7 @@ body {
   font-size: 72px;
   padding: 10px;
   margin-left: 40px;
+  height:1%;
 }
 
 .settings {
