--- a/src/Player.css
+++ b/src/Player.css
@@ -1,13 +1,8 @@
 .player {
-	margin-top: 500px;
 	background: white;
-	text-align: center;
  	display: block;
-  margin-left: auto;
-  margin-right: auto;
-	width: 600px;
-	height: 50px;
-	position: relative;
+	width: 480px;
+	height: 25%;
 }
 
 
