--- a/src/Info.css
+++ b/src/Info.css
@@ -1,3 +1,15 @@
+.count {
+  font-size: 20px;
+  color:white;
+  padding-right: 100px;
+}
+
+.fas fa-thumbs-down thumbsi{
+
+}
+
+
+
 .info {
   margin-left: 10px;
   color: white;
@@ -45,7 +57,7 @@
 }
 
 .thumbsi {
-  margin-left: 75px;
+  margin-right: 30px;
   color: #0078ce;
   font-size: 50px;
 
@@ -57,7 +69,7 @@
 
 .infobox{
   display: flex;
-  margin-left: 50%;
+  margin-left: 5%;
   width: 300px;
   height: 360px;
   border: 1px solid black;
