--- a/src/Main.css
+++ b/src/Main.css
@@ -2,8 +2,8 @@
   width:100%;
   height: 100%;
   /* background: white; */
-  
-  background: green;
+
+  background: #232323;
   display: block;
 }
 
@@ -63,6 +63,6 @@
 
 .flexbox2 {
   padding-top: 20px;
-  margin-left: 600px;
+  margin-left: 60px;
   margin-right: 60px;
 }
