--- a/src/Main.css
+++ b/src/Main.css
@@ -54,15 +54,7 @@
   display: inline-block;
 }
 
-.videoplayer {
-  display: flex;
-  float:left;
-  width: 100%;
-  height: 30%;
-}
-
-.flexbox2 {
-  padding-top: 20px;
-  margin-left: 60px;
-  margin-right: 60px;
+.queue {
+  margin-left: 50px;
+  margin-top: 50px;
 }
