--- a/src/Player.css
+++ b/src/Player.css
@@ -1,32 +1,33 @@
 .player {
 	background: white;
  	display: block;
-	width: 480px;
-	height: 25%;
-}
-
-
-.controls {
-	float: left;
+	width: 60%;
+	height: 100%;
+	margin-left: 50px;
+	margin-top: 150px;
 }
 
 .controls {
 	color: black;
 	text-decoration: none;
-	height: 50px;
-	width:300px;
-	box-sizing: border-box;
-	padding: 15px 10px;
-	float: left;
+	height: 20px;
+	width: 300px;
+	padding: 10px;
+	display: inline-block;
+	text-align: center;
 }
 
 .buttons {
 	font-size: 25px;
 	width: 50px;
-	text-align: center;
 }
 
 .controls> a:hover {
 	background-color: gray;
 	color: lightgray;
+}
+
+.progressBar {
+	float: right;
+	width: 100%;
 }
