fixed queue css and chat

--- a/src/Queue.css
+++ b/src/Queue.css
@@ -13,12 +13,13 @@
 }
 
 .table {
-  border: 1px solid black;
   width: 100%;
 }
 
+/*
 .tr2 {
   border: 1px solid black;
   height: 30px;
   width: 100px;
 }
+*/
