--- a/src/Chat.css
+++ b/src/Chat.css
@@ -38,7 +38,7 @@ body{
   z-index: 0; 
 
   margin-top:100px; 
-  background-color:rgba(255,255,255,.7); /*main color of chat*/
+  background-color:rgba(255,255,255,1); /*main color of chat*/
   border-radius:5px;
   overflow:hidden;
   -webkit-box-shadow:0 0 8px 0 rgba(0,0,0,.3);
@@ -69,7 +69,7 @@ body{
 } 
 
 #chatroom .chats .chat{
-  background:hsla(0,0%,100%,.8);
+  background:hsla(0,0%,85%,.8);
   position:relative;
   padding:5px 13px;
   font-size:14px;
