--- a/src/Sidenav.css
+++ b/src/Sidenav.css
@@ -53,8 +53,8 @@
 }
 
 .addbox {
-  height: 200px;
-  width: 400px;
+  height: 20%;
+  width: 90%;
   position: absolute;
   background: blue;
   margin-left: 35px;
