--- a/src/Main.css
+++ b/src/Main.css
@@ -7,7 +7,7 @@
   display: block;
 }
 
-.mainTitle {
+/*.mainTitle {
   margin-top: 120px;
   font-size: 36px;
   color: white;
@@ -58,3 +58,4 @@
   margin-left: 50px;
   margin-top: 50px;
 }
+*/
