--- a/src/Main.css
+++ b/src/Main.css
@@ -1,11 +1,78 @@
-.main{
+.main {
+  width:100%;
+  height: 100%;
+  background: #232323;
+}
+
+.mainTitle {
+  font-size: 36px;
+  color: white;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.idcard {
+  color: #0078ce;
+  font-size: 24px;
+  cursor: pointer;
+  float: right;
+  padding-right: 5%;
+}
+
+
+/************ INPUT CONTAINER CSS ************/
+.mainInputContainer {
+
+}
+
+.inputContainer {
+  padding: 2% 2% 2% 2%;
+  float: left;
+  width: 50%;
+  height:10%;
+
+
+
+}
+
+#myBtn {
+  margin-left: 2%;
+}
+
+/*Music Link*/
+.linkT {
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+  float: left;
+  
+}
+
+.kickUserContainer {
+  width: 30%;
+
+  display: inline-block;
+}
+
+.userNames{
+  color:white;
+   letter-spacing: 1.5px;
+}
+
+.userListButton {
+
+}
+
+
+
+/*.main{
   width:80%;
   height: 100vh;
   /* background: white; */
-  position: static;
+/*  position: static;
   background: #232323;
   display: block;
-}
+}*/
 
 /*.mainTitle {
   margin-top: 120px;
