--- a/src/Queue.css
+++ b/src/Queue.css
@@ -1,15 +1,15 @@
 .scrollbox {
-  margin: 15px 15px 15px 15px;
-  height: 32%;
+  height: 30%;
+  margin-top: 20px;
   /* background-color: #1c1f23; */
-  background-color: white;
+  background-color: #232323;
 
   overflow: auto;
-  color: black;
-  scrollbar-base-color: gold;
+  color: white;
   font-family:sans-serif;
-  padding:10px;
-  width: 70%;
+  padding: 10px;
+  width: 100%;
+  font-size: 20px;
 }
 
 .table {
