--- a/src/Main.css
+++ b/src/Main.css
@@ -43,7 +43,7 @@
   color: white;
   font-weight: bold;
   float: left;
-  
+
 }
 
 .kickUserContainer {
@@ -59,3 +59,6 @@
 
 
 
+.scrollbox {
+  overflow: scroll;
+}
