--- a/src/Chat.css
+++ b/src/Chat.css
@@ -33,7 +33,7 @@ body{
   top:0;
   transition: transform .3s cubic-bezier(0, .52, 0, 1);
   z-index: 0;
-  background-color:rgba(255,255,255,1); /*main color of chat*/
+  background-color: #232323; /*main color of chat*/
   border-radius:5px;
   overflow: auto;
   padding: 0;
@@ -42,7 +42,6 @@ body{
 }
 
 #chatroom h3{
-  font-family:Pacifico,cursive;
   background-color: #0078ce;
   color:#fff;
   margin:0;
@@ -68,7 +67,7 @@ body{
   background:hsla(0,0%,85%,.8);
   position:relative;
   padding:5px 13px;
-  font-size:14px;
+  font-size:12px;
   border-radius:10px;
   list-style:none;
   float:left;clear:both;
@@ -87,11 +86,67 @@ body{
 
 #chatroom .chats .chat.right{
   float:right;
-  clear:both
+  clear:both;
 }
 
+#chatroom .chats .chat.left{
+  float:left;
+  clear:both;
+  background-color: #606466;
+  color: white;
+}
 
 #chatroom .chats .chat a{
   text-decoration:none;
   color:
+}
+
+#chatRoom input {
+
+}
+
+#chatroom .input{
+  height:40px;
+  margin-top:0px; /*Submit tab bar */
+  width:100%;
+  background: #808080; /*Color of Submit tab*/
+  display:-ms-flexbox;display:flex;
+  -ms-flex-direction:row;
+  flex-direction:row;
+  -ms-flex-align:center;
+  align-items:center
+}
+
+#chatroom .input input[type=text]{
+  background:hsla(0,0%,100%,.5); /*color of chat input box*/
+  outline:0;
+  border:2px solid white; /*border color of input box*/
+  padding:0 5px;
+  border-top-left-radius:5px;
+  border-bottom-left-radius:5px;
+  margin-left:10px;
+  width:270px;
+  height:25px;
+}
+#chatroom .input input[type=submit],.chatroom .input input[type=text]{
+  height:30px;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+  font-size:12px
+}
+
+#chatroom .input input[type=submit]{
+  background:transparent;
+  border:1px solid black; /*border color of submit*/
+  width:70px;border-top-right-radius:5px;
+  border-bottom-right-radius:5px;
+  cursor:pointer;
+  -webkit-transition:all .3s ease;
+  -o-transition:all .3s ease;
+  transition:all .3s ease
+}
+
+#chatroom .input input[type=submit]:hover{
+  background:#51aff7;
+  color:#fff;
 }
