--- a/src/Chat.css
+++ b/src/Chat.css
@@ -33,12 +33,10 @@ body{
   top:0;
   transition: transform .3s cubic-bezier(0, .52, 0, 1);
   z-index: 0;
-  background-color: #232323; /*main color of chat*/
+  background-color: #343a40; /*main color of chat*/
   border-radius:5px;
   overflow: auto;
   padding: 0;
-  -webkit-box-shadow:0 0 8px 0 rgba(0,0,0,.3);
-  box-shadow:0 0 8px 0 rgba(0,0,0,.3);
 }
 
 #chatroom h3{
