--- a/src/Main.css
+++ b/src/Main.css
@@ -1,7 +1,11 @@
 .main {
   width:100%;
-  height: 100%;
+  height: 65vh;
   background: #232323;
+}
+
+.flexbox{
+  display: flex;
 }
 
 .mainTitle {
@@ -11,12 +15,11 @@
   padding: 10px;
 }
 
-.idcard {
+.key {
   color: #0078ce;
   font-size: 24px;
   cursor: pointer;
-  float: right;
-  padding-right: 5%;
+  float: left;
 }
 
 
@@ -24,13 +27,10 @@
 
 
 .inputContainer {
-  padding: 2% 2% 2% 2%;
+  padding: 10px;
   float: left;
   width: 50%;
   height:10%;
-
-
-
 }
 
 #myBtn {
@@ -38,7 +38,7 @@
 }
 
 .linkT {
-  font-size: 20px;
+  font-size: 16px;
   color: white;
   font-weight: bold;
   float: left;
@@ -54,10 +54,4 @@
 .userNames{
   color:white;
    letter-spacing: 1.5px;
-}
-
-
-
-.scrollbox {
-  overflow: scroll;
 }
