--- a/src/Sidenav.css
+++ b/src/Sidenav.css
@@ -1,10 +1,15 @@
 .sidenav{
   width: 100%;
   height: 100%;
-  background: #3a3a3a;
+  background: #343a40;
   display: block;
 }
 
 .b_width {
   width: 100%;
+}
+
+#roomList td {
+  padding: 0;
+   border: 1px solid black;
 }
