--- a/src/Sidenav.css
+++ b/src/Sidenav.css
@@ -1,8 +1,9 @@
 .sidenav{
   width: 100%;
-  height: 100%;
+  height: 85vh;
   background: #343a40;
   display: block;
+  opacity: 0.8;
 }
 
 .b_width {
