--- a/src/Chat.css
+++ b/src/Chat.css
@@ -34,6 +34,10 @@ body{
   font-size: 12px;
 }
 
+.userListButton{
+  padding: 2px;
+}
+
 #chatroom{
   width: auto;
   display: block;
@@ -45,7 +49,6 @@ body{
   border-radius:5px;
   overflow: auto;
   padding: 0;
-  opacity: 0.8;
 }
 
 #chatroom h3{
