--- a/src/Player.css
+++ b/src/Player.css
@@ -10,30 +10,78 @@
 
 .progressBar {
 	width: 100%;
+	height: 5px;
+	position: absolute;
+	top: 5.5vh;
+	background-color: white;
 }
 
 .controls {
 	position: absolute;
-	width: 450px;
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
+	right: 0;
 }
 
 .thumbsdown {
-	font-size: 35px;
+	position: absolute;
+	font-size: 25px;
+	color: white;
+	margin: 15px 0px 0px 25px;
+	cursor: pointer;
+}
+
+.thumbsdown:hover {
+	opacity: 0.7;
+}
+
+.fullScreen {
+	position: absolute;
+	font-size: 40px;
 	color: lightgrey;
-	margin: 0px 30px 0px 20px;
+	right: 0;
+	margin: 10px 10px 0px 0px;
+	opacity: 0.6;
+	cursor: pointer;
+	text-shadow: 0px 0px 3px #000;
+}
+
+.fullScreen:hover {
+	opacity: 0.9;
+}
+
+.show {
 	display: block;
-	float: left;
+}
+
+.hide {
+	display: none;
+}
+
+.muting {
+	position: absolute;
+	font-size: 40px;
+	color: lightgrey;
+	right: 0;
+	margin: 10px 70px 0px 0px;
+	opacity: 0.6;
+	cursor: pointer;
+	text-shadow: 0px 0px 3px #000;
+}
+
+.muting:hover {
+	opacity: 0.9;
+}
+
+
+.fa-rotate-45 {
+    -webkit-transform:rotate(45deg); /* Chrome, Safari, Opera */
 }
 
 .volumeSet {
-	width: 300px;
-}
-
-.volumeDiv {
-	display: block;
-	float: right;
-	padding-top: 15px;
+	width: 200px;
+	margin-top: 20px;
+	margin-right: 60px;
 }
 
 
@@ -46,26 +94,37 @@
 	height: 15vh;
 }
 
-
 .banner {
 	background: #212529;
-	height: 7vh;
+	height: 6vh;
 	width: 100%;
 }
 
 .left {
-	float: left;
-	width: 500px;
+	width: 47%;
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
 }
 
 .right {
-	float: right;
-	width: 100px;
+	width: 20%;
+	position: absolute;
+	margin-top: 7px;
+	margin-left: auto;
+	margin-right: auto;
+	right: 0;
+	text-align: right;
 }
 
 .center {
-	margin: 0 auto;
-	width: 100px;
+	width: 10%;
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
 }
 
 .albumart {
@@ -74,6 +133,12 @@
 }
 
 .songTitle {
-	margin-left: 10px;
+	margin-top: 2px;
+	margin-left: 15px;
 	color: white;
+}
+
+.userName {
+	color: white;
+	margin-right: 15px;
 }
