--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
 }
 
 .app {
+  margin-bottom: -10px;
   background: black;
 }
 
@@ -22,6 +23,7 @@ body {
 .appDiv {
   margin-left: -15px;
   margin-right: -15px;
+  margin-bottom: -15px;
 }
 
 .settings {
