--- a/src/Chat.css
+++ b/src/Chat.css
@@ -131,7 +131,7 @@ body{
   border-top-left-radius:5px;
   border-bottom-left-radius:5px;
   margin-left:10px;
-  width:170px;
+  width:100%;
   height:25px;
 }
 #chatroom .input input[type=submit],.chatroom .input input[type=text]{
