--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html {
 
 body {
   background: black;
+  overflow-y: hidden;
 }
 
 .app {
@@ -17,6 +18,7 @@ body {
   background: #212529;
   height: 5vh;
   width: 100%;
+  margin-top: 6vh;
 }
 
 .logo {
@@ -27,7 +29,7 @@ body {
 .appDiv {
   margin-left: -15px;
   margin-right: -15px;
-  margin-bottom: -15px;
+  margin-top: 10px;
 }
 
 .settings {
@@ -46,4 +48,8 @@ body {
   float: right;
 
   /*float: right; does not work hmm*/
+}
+
+.noScroll {
+  overflow: hidden;
 }
