--- a/src/Player.css
+++ b/src/Player.css
@@ -8,8 +8,9 @@
 	width: 100%;
 	height: 5px;
 	position: absolute;
-	top: 5.5vh;
+	top: 5.6vh;
 	background-color: white;
+	margin-top: 6vh;
 }
 
 .progressBar::-moz-progress-bar
