--- a/src/Player.css
+++ b/src/Player.css
@@ -2,13 +2,14 @@
 	background: black;
  	display: block;
 	width: 100%;
+	margin-top: -1vh;
 }
 
 .progressBar {
 	width: 100%;
 	height: 5px;
 	position: absolute;
-	top: 5.6vh;
+	top: 5vh;
 	background-color: white;
 }
 
@@ -144,7 +145,7 @@
 }
 
 .songTitle {
-	margin-top: 5px;
+	margin-top: 4px;
 	margin-left: 15px;
 	color: white;
 }
@@ -155,5 +156,6 @@
 }
 
 .logo {
-	width: 130px;
+	width: 120px;
+	margin-top: -1px;
 }
