--- a/src/Chat.css
+++ b/src/Chat.css
@@ -72,7 +72,7 @@ body{
 #chatroom .chats{
   padding:0 20px;
   margin:10px 0 0;
-  height: 71vh;
+  height: 50vh;
   overflow-y:scroll;
 }
 
@@ -117,8 +117,7 @@ body{
 
 
 #chatroom .input{
-  height:38px;
-  margin-top:-15px; /*Submit tab bar */
+  height: 5vh;
   bottom: 0;
   width:100%;
   background: #808080; /*Color of Submit tab*/
@@ -136,8 +135,8 @@ body{
   border-top-left-radius:5px;
   border-bottom-left-radius:5px;
   margin-left:10px;
-  width:100%;
-  height:25px;
+  width: 14vw;
+  height: 3vh;
 }
 #chatroom .input input[type=submit],.chatroom .input input[type=text]{
   height:30px;
