--- a/src/Player.css
+++ b/src/Player.css
@@ -41,25 +41,6 @@
     background: lightgrey;
 }
 
-.controls {
-	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
-	right: 0;
-}
-
-.thumbsdown {
-	position: absolute;
-	font-size: 25px;
-	color: white;
-	margin: 15px 0px 0px 25px;
-	cursor: pointer;
-}
-
-.thumbsdown:hover {
-	opacity: 0.7;
-}
-
 .fullScreen {
 	position: absolute;
 	font-size: 40px;
@@ -101,6 +82,27 @@
 
 .fa-rotate-45 {
     -webkit-transform:rotate(45deg); /* Chrome, Safari, Opera */
+}
+
+.skipDiv {
+	width: 8vh;
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	top: 18vh;
+}
+
+.thumbsdown {
+	font-size: 8vh;
+	color: lightgrey;
+	cursor: pointer;
+	opacity: 0.6;
+}
+
+.thumbsdown:hover {
+	opacity: 0.9;
 }
 
 .volumeSet {
@@ -167,4 +169,30 @@
 .logo {
 	width: 120px;
 	margin-top: -1px;
+}
+
+
+/* Progress for Skip */
+
+.skipProgress {
+	position: absolute;
+	left: -6vh;
+	top: -6vh;
+	width: 20vh;
+	height: 20vh;
+	opacity: 0.6;
+}
+	
+.fadeOut{
+	opacity:0;
+	width:0;
+	height:0;
+	transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+}
+
+.fadeIn{
+	opacity:1;
+	width:100px;
+	height:100px;
+	transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
 }
