--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -6,14 +6,22 @@
 }
 
 .forms {
-  margin-top: 85%;
+  margin-top: 20%;
   background: #232323;
   position: relative;
 }
 
-.logo {
+.logo6 {
   width: 100%;
   height: 100%;
+}
+
+.centerLogo {
+    margin-top: 10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .loginButton {
