--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -29,3 +29,16 @@
   background: #6a6976;
   color: white;
 }
+
+.register {
+  margin-top: 50px;
+  color: white;
+}
+
+.loginForm {
+  width: 400px;
+  text-align: center;
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
