--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -16,6 +16,13 @@
   height: 100%;
 }
 
+.centerlogin{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .centerLogo {
     margin-top: 10%;
     display: block;
